initial commit, I know Sam I am doing this way too late

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
         "no-tabs": 0,
         "no-plusplus": 0,
         "no-use-before-define": 0,
-        "comma-dangle": 0
+		"comma-dangle": 0,
+		"no-unused-vars": 0
     },
     "env": {
         "browser": "true"
